--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "astro": "astro"
   },
   "dependencies": {
-    "@unpic/astro": "^0.0.40",
+    "@astrojs/rss": "^4.0.5",
+    "@unpic/astro": "^0.0.41",
     "astro": "^3.6.0"
   },
   "devDependencies": {
