--- a/package.json
+++ b/package.json
@@ -10,9 +10,12 @@
     "astro": "astro"
   },
   "dependencies": {
-    "@astrojs/rss": "^4.0.7",
+    "@astrojs/rss": "^4.0.9",
+    "@iconify-json/mingcute": "^1.2.1",
+    "@iconify-json/ri": "^1.2.3",
     "@unpic/astro": "^0.0.41",
-    "astro": "^4.15.4"
+    "astro": "^4.16.8",
+    "astro-icon": "^1.1.1"
   },
   "devDependencies": {
     "prettier-plugin-astro": "^0.12.2"
